--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 :root {
   --details: #f4f4f4;
   --borders: #c5bcbc;
@@ -9,7 +10,8 @@
   box-sizing: border-box;
 }
 html, body, #app, #app>div {
-  height: 100%
+  height: 100%;
+  font-family: 'Open Sans', sans-serif;
 }
 body {
   margin: 0;
@@ -64,7 +66,9 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
+.cursor{
+  cursor: pointer;
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
